# punchpad

./: .gitignore  LICENSE  README.md  pyproject.toml
.punchpad_data/: config.json  punchpad.sqlite
punchpad_app/: __init__.py  __main__.py
punchpad_app/core/: config.py  db.py  logging_setup.py  paths.py  punches.py  queue.py  reconciler.py  repo.py  reports.py  security.py
punchpad_app/core/migrations/: 0001_init.sql  0002_kiosk.sql
punchpad_app/tui/: kiosk_screen.py
punchpad_app/web/: server.py
punchpad_app/web/static/: style.css
punchpad_app/web/templates/: admin.html  index.html  reports.html  result.html
scripts/: bootstrap_manager.py
tests/: test_cli_help.py  test_kiosk_run_once.py  test_kiosk_screen.py  test_reports.py  test_version.py  test_web_admin.py  test_web_reports.py  test_web_ui.py
